--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"url":"https://github.com/gabrielwu84/avalon-server"
 	},
 	"dependencies":{
+		"express": "~3.4.4",
 		"socket.io":"1.4.8"
 	},
 	"private":true,
